--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -56,9 +56,9 @@
               <td>
                 <%= set.name %> |
                 <a
-                  href="/lego/sets?theme=<%= set.theme %>"
+                  href="/lego/sets?theme=<%= set.Theme.name %>"
                   class="btn mt-2 btn-xs"
-                  ><%= set.theme %></a
+                  ><%= set.Theme.name %></a
                 >
               </td>
 
